src/test/ui/associated-types/defaults-cyclic-fail-2.stderr
error[E0275]: overflow evaluating the requirement `<bool as Tr>::B`
  --> $DIR/defaults-cyclic-fail-2.rs:27:5
   |
LL |     type A = Box<Self::B>;
   |     ^^^^^^^^^^^^^^^^^^^^^^ cyclic type of infinite size

error[E0275]: overflow evaluating the requirement `<usize as Tr>::A`
  --> $DIR/defaults-cyclic-fail-2.rs:33:5
   |
LL |     type B = &'static Self::A;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^ cyclic type of infinite size

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0271`.
